--- a/ChestnutBunProblem.ipynb
+++ b/ChestnutBunProblem.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -122,50 +122,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thickness: 703687441.77664 meters\n",
-      "time : 0.003130197525024414[s]\n",
-      "Thickness: 703687441.77664 meters\n",
-      "time : 0.0012652873992919922[s]\n",
-      "Thickness: 703687441.77664 meters\n",
-      "time : 0.0012984275817871094[s]\n"
+      "CPU times: user 7 µs, sys: 0 ns, total: 7 µs\n",
+      "Wall time: 14.8 µs\n",
+      "CPU times: user 14 µs, sys: 1 µs, total: 15 µs\n",
+      "Wall time: 21.5 µs\n",
+      "time : 8796093021305[s]\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "start = time.time()\n",
-    "THICKNESS = 0.00008\n",
-    "folded_thickness = THICKNESS* 2**43\n",
-    "print(\"Thickness: {} meters\".format(folded_thickness))\n",
-    "elapsed_time = time.time() - start\n",
+    "#####\n",
+    "arithmetic_time= %time 2**43\n",
+    "n = 43\n",
+    "for_time = %time sum(range(n))\n",
+    "#####\n",
+    "\n",
+    "elapsed_time = arithmetic_time - for_time\n",
+    "\n",
     "print(\"time : {}[s]\".format(elapsed_time))\n",
-    "\n",
-    "import timeit\n",
-    "start = time.time()\n",
-    "THICKNESS = 0.00008\n",
-    "folded_thickness = THICKNESS* (2**43)\n",
-    "print(\"Thickness: {} meters\".format(folded_thickness))\n",
-    "elapsed_time = time.time() - start\n",
-    "print(\"time : {}[s]\".format(elapsed_time))\n",
-    "\n",
-    "import timeit\n",
-    "start = time.time()\n",
-    "THICKNESS = 0.00008\n",
-    "folded_thickness = THICKNESS\n",
-    "\n",
-    "for x in range(43):\n",
-    "  folded_thickness = folded_thickness * 2\n",
-    "\n",
-    "print(\"Thickness: {} meters\".format(folded_thickness))\n",
-    "elapsed_time = time.time() - start\n",
-    "print(\"time : {}[s]\".format(elapsed_time))\n"
+    "\n"
    ]
   },
   {
