--- a/ML2021 _Week2 Mathematics for Machine Learning/Assignment_2_gradient.ipynb
+++ b/ML2021 _Week2 Mathematics for Machine Learning/Assignment_2_gradient.ipynb
@@ -213,7 +213,8 @@
     "\n",
     "    gradient_array.append(np.divide(difference_number_y,difference_number_x))\n",
     "    \n",
-    "print(gradient_array)"
+    "print(gradient_array)\n",
+    "gradient = np.array(Y[1:] - Y[:-1])/(X[1:] - X[:-1])"
    ]
   },
   {
